--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,50 +1,26 @@
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import './components/post';
+@import './components/header';
+@import './components/button';
+
+
 
 body {
-    padding: 0 11vw;
+    background-color: #F6F7F7;
+    padding-block: 82px;
+    
+}
+ * {
     font-family: "DM Sans", sans-serif;
-}
+ }
 
-.post-container {
-    box-shadow: 0px 1px 7px 0px #282F2D12;
+.container {
     width: 100%;
-    height: 753px;
-
-    .post-header {
-        padding: 24px 24px 0;
-        display: grid;
-        grid-template-columns: auto 1fr;
-        gap: 12px;
-
-        .details-container {
-            .username {
-                font-size: 16px;
-                color: #282F2D;
-            }
-
-            .shop-name {
-                font-size: 14px;
-                color: #0a66c2;
-
-                .time {
-                    color: #949796;
-                }
-            }
-        }
-    }
-
-    .post-body {
-        .post-text {
-            margin-inline: 24px;
-            font-size: 14px;
-            color: #000;
-        }
-
-        .post-img-container {
-            
-        }
-    }
-}
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+    box-sizing: border-box;
+  }
 
 
 .avatar-container {
@@ -55,10 +31,40 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 9px 0;
 
+    .avatar {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
-.avatar {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+
+
+.feed-msg {
+    text-align: center;
+    font-size: 20px;
+    margin-top: 45px;
 }
+
+
+
+@media (max-width: 768px) {
+
+    .header .container {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .container {
+        padding: 0 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .header {
+        padding: 8px 0;
+    }
+}
+
+
