--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -2,52 +2,30 @@
 @import './components/post';
 @import './components/header';
 @import './components/button';
-
-
+@import './components/avatar';
 
 body {
     background-color: #F6F7F7;
-    padding-block: 82px;
-    
+    padding-block: 82px;  
 }
+
  * {
     font-family: "DM Sans", sans-serif;
  }
 
 .container {
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 0 auto;
     padding: 0 15px;
     box-sizing: border-box;
-  }
-
-
-.avatar-container {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 9px 0;
-
-    .avatar {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    
+    .feed-msg {
+        text-align: center;
+        font-size: 20px;
+        margin-top: 45px;
     }
 }
-
-
-.feed-msg {
-    text-align: center;
-    font-size: 20px;
-    margin-top: 45px;
-}
-
-
 
 @media (max-width: 768px) {
 
