--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,16 +1,5 @@
 .like-btn, .comment-btn {
-    width: 100%;
-    padding: 9px 24px;
-    font-size: 14px;
-    color: #484E4C;
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
+        @include buttonStyle(100%, 9px 24px, 14px, #484E4C);
     
     &.didlike {
         color: #0A66C2;
@@ -18,18 +7,7 @@
 }
 
 .navbar-btn {
-    color: #949796;
-    font-size: 16px;
-    padding: 18px 24px 18px 2px;
-    cursor: pointer;
-    background-color: transparent;
-    border: none;
-    width: min-content;
-    display: grid;
-    grid-template-columns: auto auto;
-    justify-content: center;
-    align-items: center;
-    gap: 8px;
+    @include buttonStyle(min-content, 18px 24px 18px 2px, 16px, #949796);
     position: relative;
 
     .navbar-icon {
