--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -56,6 +56,11 @@
     }
  
     @media (max-width: 780px) {
+        .container {
+            flex-direction: column;
+            text-align: center;
+        }
+
         .search-container {
             width: calc(100vw - 300px);
             justify-content: left;
@@ -103,5 +108,9 @@
 }
 
 
-
+@media (max-width: 480px) {
+    .header {
+        padding: 8px 0;
+    }
+}
 
